# latency-surgeon

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: USAGE.md
examples/: quickstart.py
hf_export/: README.md  config.json  push_to_hub.py
infographics/: speedup_comparison.txt  surgery_flow.txt  tucker_decomposition.txt
latency_surgeon/: __init__.py  attention_replace.py  cli.py  hf_integration.py  tucker.py
latency_surgeon/core/: benchmarker.py  patcher.py  rank_tuner.py
latency_surgeon/report/: __init__.py  html_report.py
latency_surgeon/report/templates/: report.html
tests/: test_benchmarker.py  test_patcher.py  test_tucker.py
