[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "latency-surgeon"
version = "0.1.0"
description = "Give your model a 40% speedup in 3 lines of code via Tucker decomposition of attention layers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "LatencySurgeon Contributors" }
]
keywords = ["deep-learning", "inference", "optimization", "tucker-decomposition", "attention", "transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "scipy>=1.10.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
report = [
    "jinja2>=3.1.0",
]
hf = [
    "huggingface_hub>=0.19.0",
]
all = [
    "jinja2>=3.1.0",
    "huggingface_hub>=0.19.0",
    "pytest>=7.4.0",
]

[project.scripts]
latency-surgeon = "latency_surgeon.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/latency-surgeon"
Repository = "https://github.com/your-org/latency-surgeon"
Issues = "https://github.com/your-org/latency-surgeon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["latency_surgeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["latency_surgeon"]
omit = ["tests/*", "examples/*"]
